# rhomboidtiling_convex_collective

./: README.md
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  orderk
cpp/catch2/: catch.hpp
cpp/src/: orderk_delaunay.h  orderk_delaunay_impl.h
python/: angles.py  incremental.py  main.py  orderk_delaunay.py  plotter.py  refinement.py
refinementlib/: .gitignore  angles.py  lower_hull_anim.py  main.py  plotter.py  refinement.py  sampler.py
